# mstpd

./: .depend  .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.am  NEWS  README.VLANs.md  README.md  README.ubus.md  bridge-stp  bridge-stp.conf  bridge-stp.in  bridge_config.c  bridge_config.h  bridge_ctl.h  bridge_track.c  bridge_track.h  brmon.c  config.c  config.h  configure.ac  ctl_functions.h  ctl_main.c  ctl_socket_client.c  ctl_socket_server.c  driver.h  driver_deps.c  epoll_loop.c  epoll_loop.h  hmac_md5.c  libnetlink.c  libnetlink.h  list.h  log.h  main.c  mstp.c  mstp.h  mstpd.spec  netif_utils.c  (+9 more)
.github/workflows/: build.yml  test.yml
contrib/linux/patches-5.10/: 0001-switchdev-add-fid-sid-state-to-VLAN-notification.patch  0002-bridge-support-fid-sid-VLAN-attributes.patch
debian/: changelog  control  copyright  mstpd.lintian-overrides  mstpd.prerm  prerm  rules
debian/upstream/: metadata
lib/: bash_completion  ifupdown.sh.in  mstp_config_bridge.in  mstpctl-utils-functions.sh  mstpctl-utils-interfaces.5  mstpctl.8
linux_pvstate/: driver_deps.c
platform/: dummy.c  linux-bridge.c  platform.h
scripts/: bridge-stp
tests/: README.md  run_tests.sh  run_tests_unpriv.sh  test_digest.c
tests/cases/: t10_edge_ports.sh  t11_bpdu_guard.sh  t12_bridge_assurance.sh  t13_path_cost.sh  t14_priority.sh  t15_timers.sh  t16_protocol_migration.sh  t17_statistics.sh  t18_stress.sh  t19_error_handling.sh  t1_daemon_lifecycle.sh  t20_cli.sh  t2_bridge_management.sh  t3_port_management.sh  t4_stp_convergence.sh  t5_rstp_convergence.sh  t6_mstp_basic.sh  t7_port_roles.sh  t8_port_states.sh  t9_topology_change.sh
tests/lib/: testlib.sh
utils/: bash_completion  bridge-stp.8  ifquery  ifupdown.sh.in  mstp_config_bridge.in  mstp_restart.8  mstpctl-utils-functions.sh  mstpctl-utils-interfaces.5  mstpctl.8  mstpd.8  mstpd.service.in
